refactored Action Completion